# pico_projects

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cicd_actions.yml
basic_demo/: CMakeLists.txt  FreeRTOSConfig.h  lwipopts.h  main.c  main.cpp
basic_demo/app_command/: app_command.cpp  app_command.hpp  command_conf.cpp
basic_demo/led/: led.cpp  led.hpp
basic_demo/script/: tcp_socket_client.py
basic_demo/temperature/: temperature.cpp  temperature.hpp
basic_demo/wifi_comm/: wifi_comm.cpp
cicd_pipeline/script/: generate_source_file_list.py
client/mongoose_ui/: index.html  package.json
client/mongoose_ui/src/: App.tsx
cmake/: compiler_warning_options.cmake
dev_tool/: build_picotool.ps1  generate_source_file_list.py
dev_tool/module_template/: template.cpp  template.hpp
plain_pico/: CMakeLists.txt  main.cpp
plain_pico/app_command/: command_conf.cpp  command_conf.hpp
plain_pico/app_feedback/: app_feedback.cpp
plain_pico/wifi_comm/: wifi_comm.hpp
preact_client/: index.html  package.json  tsconfig.json
preact_client/src/: index.tsx
preact_client/src/components/: Header.tsx
preact_client/src/routes/: Home.tsx
projects/: CMakeLists.txt
projects/plain_pico/: CMakeLists.txt  FreeRTOSConfig.h
projects/plain_pico/app_feedback/: app_feedback.hpp
projects/plain_pico/led/: led.cpp
projects/plain_pico/script/: tcp_socket_client.py
projects/plain_pico/temperature/: temperature.cpp
projects/plain_pico/wifi_comm/: wifi_comm.cpp
projects/sensor_kit/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
projects/sensor_kit/app_command/: app_command.cpp  app_command.hpp  command_conf.cpp  command_conf.hpp
projects/sensor_kit/app_feedback/: app_feedback.cpp
projects/sensor_kit/led/: led.cpp  led.hpp
projects/sensor_kit/rtos_task/: rtos_task-setup.cpp
projects/sensor_kit/script/: generate_packed_file_system.py  tcp_socket_client.py
projects/sensor_kit/temperature/: temperature.cpp
projects/sensor_kit/utility/: rtos_priority_levels.hpp  string_conversion.hpp
projects/sensor_kit/web_server/: web_server.cpp  web_server.hpp
projects/sensor_kit/web_server/ui_page/: index.html  main.js  style.css  ui_page_packed_filesystem.cpp  web_page_packed_file_system.tpp
projects/sensor_kit/wifi_comm/: wifi_comm.cpp  wifi_comm.hpp
projects/shared/cmake/: compiler_warning_options.cmake
sensor_kit/: CMakeLists.txt  FreeRTOSConfig.h  lwipopts.h  main.cpp
sensor_kit/app_command/: app_command.cpp  app_command.hpp  command_conf.cpp  command_conf.hpp
sensor_kit/app_feedback/: app_feedback.hpp
sensor_kit/button/: button.cpp  button.hpp
sensor_kit/led/: led.cpp  led.hpp
sensor_kit/rtos_task/: rtos_task-setup.hpp
sensor_kit/script/: tcp_socket_client.py
sensor_kit/temperature/: temperature.cpp  temperature.hpp
sensor_kit/wifi_comm/: wifi_comm.cpp
utility/: header_template.txt
